# rusty_snake

./: Cargo.toml  Dockerfile  Procfile  avoid_killing_self.json  avoid_self_trap.json  cloudbuild.yaml  end_game.json  log.txt  test_request.json
.github/workflows/: cloud_deploy.yml  docker-image.yml
battler/: Cargo.toml  index.html  index.scss
battler/battler/: index.scss
battler/src/: board.rs  main.rs  stats.rs
lib/: Cargo.toml
lib/scenarios/: avoid_death_advanced.json  avoid_death_get_food.json  avoid_head_to_head_death.json  avoid_suicide.json  do_not_circle_food.json  multi_snake.json  test_request.json
lib/src/: board.rs  config.rs  floodfill.rs  lib.rs  logic.rs  minimax.rs  models.rs  test_utils.rs  utils.rs
lib/src/learning/: linear.rs  mod.rs  model.rs  simulation.rs
lib/src/montecarlo/: evaulator.rs  multitree.rs  nn_evaluator.rs  node_state.rs  tree.rs
scenarios/: get_the_food.json  test_request.json
server/: Cargo.toml
server/src/: main.rs
src/: config.rs  floodfill.rs  logic.rs  main.rs  minimax.rs  models.rs  montecarlo.rs  multitree.rs  simulation.rs  test_utils.rs  utils.rs
src/learning/: simulation.rs
src/montecarlo/: mod.rs  multitree.rs  nn_evaluator.rs  node_state.rs  rave.rs  tree.rs
trainer/: Cargo.toml
trainer/src/: main.rs
