[package]
name = "snake_trainer"
version = "1.0.0"
edition = "2018"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
snake_lib = { path = "../lib" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"
dotenv = "0.15.0"
rayon = "1.8.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "cuda",
    "cudnn",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "cuda",
    "cudnn",
] }
